--- a/department-service.properties
+++ b/department-service.properties
@@ -20,3 +20,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # application
 spring.application.name=DEPARTMENT-SERVICE
+
+# test
+sping.boot.message=test
