--- a/department-service.properties
+++ b/department-service.properties
@@ -22,4 +22,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=DEPARTMENT-SERVICE
 
 # test
-sping.boot.message=test
+spring.boot.message=test
